Fix small gap on hover
Before: http://s23.postimg.org/vz0qx3li3/webperf.png
After: http://s23.postimg.org/y2b64rlaz/webperf.png

--- a/static/less/topbar.less
+++ b/static/less/topbar.less
@@ -269,14 +269,13 @@
   }
 
   .nav > li > a {
-    padding: 6px 13px 0;
+    padding: 7px 13px 0;
     text-decoration: none;
     text-shadow: none;
     font-weight: 600;
     font-size: 10px;
     text-transform: uppercase;
     text-align: center;
-    min-height: 49px;
     &:hover,
     &:active,
     &:focus {
@@ -305,9 +304,6 @@
     color: @text-color-highlight;
   }
 
-  .nav > li.active > a {
-    min-height: 46px;
-  }
   .nav > li > a#space-menu {
     padding-right: 13px;
     border-right: 1px solid #ededed;
